I have resolved the issue where the video player was not showing on the mobile portrait view.

--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -828,6 +828,7 @@ body.portal-layout .container {
     min-height: unset;
     border-radius: 0;
     flex-shrink: 0;
+    flex: none;
   }
   
   .channel-info {
